[package]
name = "ed_strip"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
once_cell = "1.20.2"
rayon = "1.10.0"
thiserror = "2.0.3"
tree-sitter = "0.24.4"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.1"
tree-sitter-dockerfile = "4.0.0"                                                              # Forked from 0.2.0
tree-sitter-go = "0.23.3"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-kotlin = "4.0.0"                                                                  # forked from 0.3.8
tree-sitter-lua = "0.2.0"
tree-sitter-objc = "4.0.0"                                                                    # forked from 3.0.0
tree-sitter-php = "0.23.11"
tree-sitter-proto = "0.2.0"                                                                   # forked from 0.2.0
tree-sitter-python = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.21"
tree-sitter-swift = "0.6.0"
tree-sitter-toml = "4.0.0"                                                                    # forked from "0.20.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.6.1"
tree-sitter-powershell = { path = "./unpublished/tree-sitter-powershell", version = "4.0.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"


[build-dependencies]
cc = "*"

[patch.crates-io]
# It seems the latest version of objc isn't published on github
# The crate is versioned at 3.0.0, but the github version is 2.1.0
# We resolve this by altering both to 4.0.0
tree-sitter-objc = { path = "./patches/tree-sitter-objc" }
tree-sitter-kotlin = { path = "./patches/tree-sitter-kotlin" }
tree-sitter-toml = { path = "./patches/tree-sitter-toml" }
tree-sitter-dockerfile = { path = "./patches/tree-sitter-dockerfile" }
